--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -13,20 +13,21 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-28 Sun 14:56]
+#+CAPTION: Clock summary at [2019-04-28 Sun 15:19]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *41:17* |       |       | 100.0 |
+| *Total time*                                           | *41:38* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 41:17   |       |       | 100.0 |
-| Active                                                 |         | 41:17 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  2:40 |   6.5 |
+| Stories                                                | 41:38   |       |       | 100.0 |
+| Active                                                 |         | 41:38 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  2:40 |   6.4 |
 | Sprint and product backlog grooming                    |         |       |  1:13 |   2.9 |
 | Create a video demo for the previous sprint's features |         |       |  1:55 |   4.6 |
 | Read variability papers                                |         |       |  1:04 |   2.6 |
-| Finish implementing the variability model              |         |       | 10:49 |  26.2 |
-| Read meta-data using configurations                    |         |       | 23:36 |  57.2 |
+| Finish implementing the variability model              |         |       | 10:49 |  26.0 |
+| Read meta-data using configurations                    |         |       | 23:36 |  56.7 |
+| Trim down stitch's use of annotations                  |         |       |  0:21 |   0.8 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -359,6 +360,9 @@ Notes:
 
 
 *** STARTED Trim down stitch's use of annotations                     :story:
+    :LOGBOOK:
+    CLOCK: [2019-04-28 Sun 14:57]--[2019-04-28 Sun 15:18] =>  0:21
+    :END:
 
 - remove weaving: configuration, weaver, command line options, cmake
   targets.
