--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -13,21 +13,21 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-28 Sun 15:19]
+#+CAPTION: Clock summary at [2019-04-28 Sun 16:23]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *41:38* |       |       | 100.0 |
+| *Total time*                                           | *42:32* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 41:38   |       |       | 100.0 |
-| Active                                                 |         | 41:38 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  2:40 |   6.4 |
+| Stories                                                | 42:32   |       |       | 100.0 |
+| Active                                                 |         | 42:32 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  2:40 |   6.3 |
 | Sprint and product backlog grooming                    |         |       |  1:13 |   2.9 |
-| Create a video demo for the previous sprint's features |         |       |  1:55 |   4.6 |
-| Read variability papers                                |         |       |  1:04 |   2.6 |
-| Finish implementing the variability model              |         |       | 10:49 |  26.0 |
-| Read meta-data using configurations                    |         |       | 23:36 |  56.7 |
-| Trim down stitch's use of annotations                  |         |       |  0:21 |   0.8 |
+| Create a video demo for the previous sprint's features |         |       |  1:55 |   4.5 |
+| Read variability papers                                |         |       |  1:04 |   2.5 |
+| Finish implementing the variability model              |         |       | 10:49 |  25.4 |
+| Read meta-data using configurations                    |         |       | 23:36 |  55.5 |
+| Trim down stitch's use of annotations                  |         |       |  1:15 |   2.9 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -361,6 +361,8 @@ Notes:
 
 *** STARTED Trim down stitch's use of annotations                     :story:
     :LOGBOOK:
+    CLOCK: [2019-04-28 Sun 15:42]--[2019-04-28 Sun 16:14] =>  0:32
+    CLOCK: [2019-04-28 Sun 15:19]--[2019-04-28 Sun 15:41] =>  0:22
     CLOCK: [2019-04-28 Sun 14:57]--[2019-04-28 Sun 15:18] =>  0:21
     :END:
 
@@ -368,7 +370,9 @@ Notes:
   targets.
 - remove profile field from stitch templates. Should not break
   anything.
-- remove annotations expander from workflow
+- remove annotations expander from workflow. Actually we can't do this
+  yet because we are still relying on the profile for the stream name
+  variable.
 - add variability parameters to workflow, supply them from formatters.
 
 *** Create an element builder                                         :story:
