--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -13,21 +13,21 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-28 Sun 16:23]
+#+CAPTION: Clock summary at [2019-04-28 Sun 17:22]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *42:32* |       |       | 100.0 |
+| *Total time*                                           | *43:35* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 42:32   |       |       | 100.0 |
-| Active                                                 |         | 42:32 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  2:40 |   6.3 |
-| Sprint and product backlog grooming                    |         |       |  1:13 |   2.9 |
-| Create a video demo for the previous sprint's features |         |       |  1:55 |   4.5 |
-| Read variability papers                                |         |       |  1:04 |   2.5 |
-| Finish implementing the variability model              |         |       | 10:49 |  25.4 |
-| Read meta-data using configurations                    |         |       | 23:36 |  55.5 |
-| Trim down stitch's use of annotations                  |         |       |  1:15 |   2.9 |
+| Stories                                                | 43:35   |       |       | 100.0 |
+| Active                                                 |         | 43:35 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  2:40 |   6.1 |
+| Sprint and product backlog grooming                    |         |       |  1:13 |   2.8 |
+| Create a video demo for the previous sprint's features |         |       |  1:55 |   4.4 |
+| Read variability papers                                |         |       |  1:04 |   2.4 |
+| Finish implementing the variability model              |         |       | 10:49 |  24.8 |
+| Trim down stitch's use of annotations                  |         |       |  1:30 |   3.4 |
+| Read meta-data using configurations                    |         |       | 24:24 |  56.0 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -244,8 +244,33 @@ Notes:
 - no decoration for root module
 - cmake files are not going via boilerplate.
 
-*** STARTED Read meta-data using configurations                       :story:
+*** COMPLETED Trim down stitch's use of annotations                   :story:
+    CLOSED: [2019-04-28 Sun 16:54]
     :LOGBOOK:
+    CLOCK: [2019-04-28 Sun 16:38]--[2019-04-28 Sun 16:53] =>  0:15
+    CLOCK: [2019-04-28 Sun 15:42]--[2019-04-28 Sun 16:14] =>  0:32
+    CLOCK: [2019-04-28 Sun 15:19]--[2019-04-28 Sun 15:41] =>  0:22
+    CLOCK: [2019-04-28 Sun 14:57]--[2019-04-28 Sun 15:18] =>  0:21
+    :END:
+
+- remove weaving: configuration, weaver, command line options, cmake
+  targets.
+- remove profile field from stitch templates. Should not break
+  anything.
+- remove annotations expander from workflow. Actually we can't do this
+  yet because we are still relying on the profile for the stream name
+  variable. Actually we need to hack out profiles because otherwise we
+  would have to somehow support profile bindings inside of
+  stitch. This is really far too complicated to even contemplate. We
+  need to manually set the stream variable on every template and then
+  remove the profile.
+- add variability parameters to workflow, supply them from formatters.
+
+*** COMPLETED Read meta-data using configurations                     :story:
+    CLOSED: [2019-04-28 Sun 17:20]
+    :LOGBOOK:
+    CLOCK: [2019-04-28 Sun 16:54]--[2019-04-28 Sun 17:20] =>  0:26
+    CLOCK: [2019-04-28 Sun 16:15]--[2019-04-28 Sun 16:37] =>  0:22
     CLOCK: [2019-04-28 Sun 14:01]--[2019-04-28 Sun 14:23] =>  0:22
     CLOCK: [2019-04-28 Sun 10:32]--[2019-04-28 Sun 10:51] =>  0:19
     CLOCK: [2019-04-28 Sun 09:53]--[2019-04-28 Sun 10:04] =>  0:11
@@ -358,22 +383,11 @@ Notes:
 - archetype location transform has forward decls disabled on input,
   but still seems to be generating it.
 
+*** Remove uses of annotations                                        :story:
 
-*** STARTED Trim down stitch's use of annotations                     :story:
-    :LOGBOOK:
-    CLOCK: [2019-04-28 Sun 15:42]--[2019-04-28 Sun 16:14] =>  0:32
-    CLOCK: [2019-04-28 Sun 15:19]--[2019-04-28 Sun 15:41] =>  0:22
-    CLOCK: [2019-04-28 Sun 14:57]--[2019-04-28 Sun 15:18] =>  0:21
-    :END:
-
-- remove weaving: configuration, weaver, command line options, cmake
-  targets.
-- remove profile field from stitch templates. Should not break
-  anything.
-- remove annotations expander from workflow. Actually we can't do this
-  yet because we are still relying on the profile for the stream name
-  variable.
-- add variability parameters to workflow, supply them from formatters.
+- disable population of annotation to prove the new code is working
+  everywhere.
+- remove all legacy types from variability model.
 
 *** Create an element builder                                         :story:
 
