--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -13,22 +13,22 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-29 Mon 08:55]
+#+CAPTION: Clock summary at [2019-04-29 Mon 10:29]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *44:43* |       |       | 100.0 |
+| *Total time*                                           | *46:13* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 44:43   |       |       | 100.0 |
-| Active                                                 |         | 44:43 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  2:40 |   6.0 |
-| Sprint and product backlog grooming                    |         |       |  1:29 |   3.3 |
-| Create a video demo for the previous sprint's features |         |       |  1:55 |   4.3 |
-| Read variability papers                                |         |       |  1:04 |   2.4 |
-| Finish implementing the variability model              |         |       | 10:49 |  24.2 |
-| Trim down stitch's use of annotations                  |         |       |  1:30 |   3.4 |
-| Read meta-data using configurations                    |         |       | 24:24 |  54.6 |
-| Remove uses of annotations                             |         |       |  0:52 |   1.9 |
+| Stories                                                | 46:13   |       |       | 100.0 |
+| Active                                                 |         | 46:13 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  2:40 |   5.8 |
+| Sprint and product backlog grooming                    |         |       |  1:40 |   3.6 |
+| Create a video demo for the previous sprint's features |         |       |  1:55 |   4.1 |
+| Read variability papers                                |         |       |  1:04 |   2.3 |
+| Finish implementing the variability model              |         |       | 10:49 |  23.4 |
+| Trim down stitch's use of annotations                  |         |       |  1:30 |   3.2 |
+| Read meta-data using configurations                    |         |       | 24:24 |  52.8 |
+| Remove uses of annotations                             |         |       |  2:11 |   4.7 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -126,6 +126,7 @@ Happy Modeling!
 
 *** STARTED Sprint and product backlog grooming                       :story:
     :LOGBOOK:
+    CLOCK: [2019-04-29 Mon 10:17]--[2019-04-29 Mon 10:28] =>  0:11
     CLOCK: [2019-04-29 Mon 07:03]--[2019-04-29 Mon 07:19] =>  0:16
     CLOCK: [2019-04-28 Sun 14:40]--[2019-04-28 Sun 14:56] =>  0:16
     CLOCK: [2019-04-28 Sun 14:24]--[2019-04-28 Sun 14:39] =>  0:15
@@ -387,6 +388,8 @@ Notes:
 
 *** STARTED Remove uses of annotations                                :story:
     :LOGBOOK:
+    CLOCK: [2019-04-29 Mon 10:12]--[2019-04-29 Mon 10:16] =>  0:04
+    CLOCK: [2019-04-29 Mon 08:56]--[2019-04-29 Mon 10:11] =>  1:15
     CLOCK: [2019-04-29 Mon 08:35]--[2019-04-29 Mon 08:55] =>  0:20
     CLOCK: [2019-04-29 Mon 07:20]--[2019-04-29 Mon 07:25] =>  0:05
     CLOCK: [2019-04-29 Mon 06:35]--[2019-04-29 Mon 07:02] =>  0:44
@@ -395,6 +398,29 @@ Notes:
 - disable population of annotation to prove the new code is working
   everywhere.
 - remove all legacy types from variability model.
+
+*** Allow stereotypes in object templates                             :story:
+
+At present we need to use inheritance to "merge" object
+templates. This has served us well, but has one limitation:
+composition has to be tree-like. In practice, we have use cases where
+composition is more haphazard, not allowing us to draw a clean
+inheritance diagram. For example, we have the "properties-like
+elements" in coding, that all have:
+
+: Documentable, Annotatable, Configurable, Nameable
+
+These could easily be packaged into a object template, but we can't
+because its not possible to have two "kinds" of inheritance graphs -
+we'd end up with lots of lines intersecting each other. However, a
+natural way to solve this problem is to allow dynamic stereotypes in
+object templates. These are mapped to parents and processed exactly as
+if we had the inheritance relationship. From a practical perspective
+this makes a lot of sense, but we need to make sure this is not
+frowned upon from a theoretical perspective.
+
+The other problem as well is that we need to mix and match dynamic and
+static stereotypes (e.g. we need =masd::object_template= as well).
 
 *** Create an element builder                                         :story:
 
