--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -13,22 +13,22 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-29 Mon 10:34]
+#+CAPTION: Clock summary at [2019-04-29 Mon 10:37]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *46:17* |       |       | 100.0 |
+| *Total time*                                           | *46:20* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 46:17   |       |       | 100.0 |
-| Active                                                 |         | 46:17 |       | 100.0 |
+| Stories                                                | 46:20   |       |       | 100.0 |
+| Active                                                 |         | 46:20 |       | 100.0 |
 | Edit release notes for previous sprint                 |         |       |  2:40 |   5.8 |
 | Sprint and product backlog grooming                    |         |       |  1:40 |   3.6 |
 | Create a video demo for the previous sprint's features |         |       |  1:55 |   4.1 |
 | Read variability papers                                |         |       |  1:04 |   2.3 |
-| Finish implementing the variability model              |         |       | 10:49 |  23.4 |
+| Finish implementing the variability model              |         |       | 10:49 |  23.3 |
 | Trim down stitch's use of annotations                  |         |       |  1:30 |   3.2 |
 | Read meta-data using configurations                    |         |       | 24:24 |  52.7 |
-| Remove uses of annotations                             |         |       |  2:15 |   4.9 |
+| Remove uses of annotations                             |         |       |  2:18 |   5.0 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -388,6 +388,7 @@ Notes:
 
 *** STARTED Remove uses of annotations                                :story:
     :LOGBOOK:
+    CLOCK: [2019-04-29 Mon 10:34]--[2019-04-29 Mon 10:37] =>  0:03
     CLOCK: [2019-04-29 Mon 10:29]--[2019-04-29 Mon 10:33] =>  0:04
     CLOCK: [2019-04-29 Mon 10:12]--[2019-04-29 Mon 10:16] =>  0:04
     CLOCK: [2019-04-29 Mon 08:56]--[2019-04-29 Mon 10:11] =>  1:15
