--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -13,22 +13,22 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-29 Mon 10:56]
+#+CAPTION: Clock summary at [2019-04-29 Mon 15:28]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *46:38* |       |       | 100.0 |
+| *Total time*                                           | *50:23* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 46:38   |       |       | 100.0 |
-| Active                                                 |         | 46:38 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  2:40 |   5.7 |
-| Sprint and product backlog grooming                    |         |       |  1:40 |   3.6 |
-| Create a video demo for the previous sprint's features |         |       |  1:55 |   4.1 |
-| Read variability papers                                |         |       |  1:04 |   2.3 |
-| Finish implementing the variability model              |         |       | 10:49 |  23.2 |
-| Trim down stitch's use of annotations                  |         |       |  1:30 |   3.2 |
-| Read meta-data using configurations                    |         |       | 24:24 |  52.3 |
-| Remove uses of annotations                             |         |       |  2:36 |   5.6 |
+| Stories                                                | 50:23   |       |       | 100.0 |
+| Active                                                 |         | 50:23 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  2:40 |   5.3 |
+| Sprint and product backlog grooming                    |         |       |  1:40 |   3.3 |
+| Create a video demo for the previous sprint's features |         |       |  1:55 |   3.8 |
+| Read variability papers                                |         |       |  1:04 |   2.1 |
+| Finish implementing the variability model              |         |       | 10:49 |  21.5 |
+| Trim down stitch's use of annotations                  |         |       |  1:30 |   3.0 |
+| Read meta-data using configurations                    |         |       | 24:24 |  48.4 |
+| Remove uses of annotations                             |         |       |  6:21 |  12.6 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -388,6 +388,8 @@ Notes:
 
 *** STARTED Remove uses of annotations                                :story:
     :LOGBOOK:
+    CLOCK: [2019-04-29 Mon 12:58]--[2019-04-29 Mon 15:28] =>  2:30
+    CLOCK: [2019-04-29 Mon 10:57]--[2019-04-29 Mon 12:12] =>  4:31
     CLOCK: [2019-04-29 Mon 10:38]--[2019-04-29 Mon 10:56] =>  0:18
     CLOCK: [2019-04-29 Mon 10:34]--[2019-04-29 Mon 10:37] =>  0:03
     CLOCK: [2019-04-29 Mon 10:29]--[2019-04-29 Mon 10:33] =>  0:04
