--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -13,22 +13,22 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-29 Mon 17:05]
+#+CAPTION: Clock summary at [2019-04-29 Mon 17:13]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *51:53* |       |       | 100.0 |
+| *Total time*                                           | *52:05* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 51:53   |       |       | 100.0 |
-| Active                                                 |         | 51:53 |       | 100.0 |
+| Stories                                                | 52:05   |       |       | 100.0 |
+| Active                                                 |         | 52:05 |       | 100.0 |
 | Edit release notes for previous sprint                 |         |       |  2:40 |   5.1 |
 | Sprint and product backlog grooming                    |         |       |  1:40 |   3.2 |
 | Create a video demo for the previous sprint's features |         |       |  1:55 |   3.7 |
-| Read variability papers                                |         |       |  1:04 |   2.1 |
+| Read variability papers                                |         |       |  1:04 |   2.0 |
 | Finish implementing the variability model              |         |       | 10:49 |  20.8 |
 | Trim down stitch's use of annotations                  |         |       |  1:30 |   2.9 |
-| Read meta-data using configurations                    |         |       | 24:24 |  47.0 |
-| Remove uses of annotations                             |         |       |  7:32 |  14.5 |
+| Read meta-data using configurations                    |         |       | 24:24 |  46.8 |
+| Remove uses of annotations                             |         |       |  7:44 |  14.8 |
 | Profiles as meta-model elements                        |         |       |  0:19 |   0.6 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
@@ -390,6 +390,7 @@ Notes:
 *** COMPLETED Remove uses of annotations                              :story:
     CLOSED: [2019-04-29 Mon 16:40]
     :LOGBOOK:
+    CLOCK: [2019-04-29 Mon 17:01]--[2019-04-29 Mon 17:13] =>  0:12
     CLOCK: [2019-04-29 Mon 15:29]--[2019-04-29 Mon 16:40] =>  1:11
     CLOCK: [2019-04-29 Mon 12:58]--[2019-04-29 Mon 15:28] =>  2:30
     CLOCK: [2019-04-29 Mon 10:57]--[2019-04-29 Mon 12:12] =>  4:31
