--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -13,23 +13,23 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-29 Mon 17:13]
+#+CAPTION: Clock summary at [2019-04-29 Mon 17:42]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *52:05* |       |       | 100.0 |
+| *Total time*                                           | *52:29* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 52:05   |       |       | 100.0 |
-| Active                                                 |         | 52:05 |       | 100.0 |
+| Stories                                                | 52:29   |       |       | 100.0 |
+| Active                                                 |         | 52:29 |       | 100.0 |
 | Edit release notes for previous sprint                 |         |       |  2:40 |   5.1 |
 | Sprint and product backlog grooming                    |         |       |  1:40 |   3.2 |
 | Create a video demo for the previous sprint's features |         |       |  1:55 |   3.7 |
 | Read variability papers                                |         |       |  1:04 |   2.0 |
-| Finish implementing the variability model              |         |       | 10:49 |  20.8 |
+| Finish implementing the variability model              |         |       | 10:49 |  20.6 |
 | Trim down stitch's use of annotations                  |         |       |  1:30 |   2.9 |
-| Read meta-data using configurations                    |         |       | 24:24 |  46.8 |
-| Remove uses of annotations                             |         |       |  7:44 |  14.8 |
-| Profiles as meta-model elements                        |         |       |  0:19 |   0.6 |
+| Read meta-data using configurations                    |         |       | 24:24 |  46.5 |
+| Remove uses of annotations                             |         |       |  7:44 |  14.7 |
+| Profiles as meta-model elements                        |         |       |  0:43 |   1.4 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -410,6 +410,7 @@ Notes:
 
 *** STARTED Profiles as meta-model elements                           :story:
     :LOGBOOK:
+    CLOCK: [2019-04-29 Mon 17:18]--[2019-04-29 Mon 17:42] =>  0:24
     CLOCK: [2019-04-29 Mon 16:41]--[2019-04-29 Mon 17:00] =>  0:19
     :END:
 
