--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -13,14 +13,14 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-29 Mon 17:55]
+#+CAPTION: Clock summary at [2019-04-29 Mon 17:58]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *52:40* |       |       | 100.0 |
+| *Total time*                                           | *52:42* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 52:40   |       |       | 100.0 |
-| Active                                                 |         | 52:40 |       | 100.0 |
+| Stories                                                | 52:42   |       |       | 100.0 |
+| Active                                                 |         | 52:42 |       | 100.0 |
 | Edit release notes for previous sprint                 |         |       |  2:40 |   5.1 |
 | Sprint and product backlog grooming                    |         |       |  1:40 |   3.2 |
 | Create a video demo for the previous sprint's features |         |       |  1:55 |   3.6 |
@@ -30,7 +30,7 @@
 | Read meta-data using configurations                    |         |       | 24:24 |  46.3 |
 | Remove uses of annotations                             |         |       |  7:44 |  14.7 |
 | Stitch is still using artefact writer                  |         |       |  0:04 |   0.1 |
-| Profiles as meta-model elements                        |         |       |  0:50 |   1.6 |
+| Profiles as meta-model elements                        |         |       |  0:52 |   1.6 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -423,6 +423,7 @@ Delete artefact writer.
 
 *** STARTED Profiles as meta-model elements                           :story:
     :LOGBOOK:
+    CLOCK: [2019-04-29 Mon 17:56]--[2019-04-29 Mon 17:58] =>  0:02
     CLOCK: [2019-04-29 Mon 17:48]--[2019-04-29 Mon 17:55] =>  0:07
     CLOCK: [2019-04-29 Mon 17:18]--[2019-04-29 Mon 17:42] =>  0:24
     CLOCK: [2019-04-29 Mon 16:41]--[2019-04-29 Mon 17:00] =>  0:19
