--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -13,22 +13,23 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-29 Mon 18:19]
+#+CAPTION: Clock summary at [2019-04-30 Tue 09:59]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *53:01* |       |       | 100.0 |
+| *Total time*                                           | *54:07* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 53:01   |       |       | 100.0 |
-| Active                                                 |         | 53:01 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  2:40 |   5.0 |
-| Sprint and product backlog grooming                    |         |       |  1:40 |   3.1 |
-| Create a video demo for the previous sprint's features |         |       |  1:55 |   3.6 |
+| Stories                                                | 54:07   |       |       | 100.0 |
+| Active                                                 |         | 54:07 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  2:40 |   4.9 |
+| Sprint and product backlog grooming                    |         |       |  2:26 |   4.5 |
+| Create a video demo for the previous sprint's features |         |       |  1:55 |   3.5 |
 | Read variability papers                                |         |       |  1:04 |   2.0 |
-| Finish implementing the variability model              |         |       | 10:49 |  20.4 |
+| Emacs maintenance and exploration work                 |         |       |  0:20 |   0.6 |
+| Finish implementing the variability model              |         |       | 10:49 |  20.0 |
 | Trim down stitch's use of annotations                  |         |       |  1:30 |   2.8 |
-| Read meta-data using configurations                    |         |       | 24:24 |  46.0 |
-| Remove uses of annotations                             |         |       |  7:44 |  14.6 |
+| Read meta-data using configurations                    |         |       | 24:24 |  45.1 |
+| Remove uses of annotations                             |         |       |  7:44 |  14.3 |
 | Stitch is still using artefact writer                  |         |       |  0:04 |   0.1 |
 | Profiles as meta-model elements                        |         |       |  1:11 |   2.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
@@ -128,6 +129,8 @@ Happy Modeling!
 
 *** STARTED Sprint and product backlog grooming                       :story:
     :LOGBOOK:
+    CLOCK: [2019-04-30 Tue 09:40]--[2019-04-30 Tue 09:57] =>  0:17
+    CLOCK: [2019-04-30 Tue 08:05]--[2019-04-30 Tue 08:34] =>  0:29
     CLOCK: [2019-04-29 Mon 10:17]--[2019-04-29 Mon 10:28] =>  0:11
     CLOCK: [2019-04-29 Mon 07:03]--[2019-04-29 Mon 07:19] =>  0:16
     CLOCK: [2019-04-28 Sun 14:40]--[2019-04-28 Sun 14:56] =>  0:16
@@ -197,6 +200,14 @@ sure our approach is aligned with the literature.
   =selection=.
 - we have two asset models: product and component. They both project
   into archetype space, and both bind into the same variability model.
+
+*** STARTED Emacs maintenance and exploration work                    :story:
+    CLOCK: [2019-04-30 Tue 08:35]--[2019-04-30 Tue 08:55] =>  0:20
+
+Any time spent improving emacs, exploring new modes, fixing snags, etc.
+
+- fix integration with bookmarks mode which had bit-rotted with the
+  latest prelude update.
 
 *** COMPLETED Finish implementing the variability model               :story:
     CLOSED: [2019-04-28 Sun 08:16]
