data: rename scope feature to binding point

--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -13,25 +13,25 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-30 Tue 09:59]
+#+CAPTION: Clock summary at [2019-04-30 Tue 10:07]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *54:07* |       |       | 100.0 |
+| *Total time*                                           | *54:16* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 54:07   |       |       | 100.0 |
-| Active                                                 |         | 54:07 |       | 100.0 |
+| Stories                                                | 54:16   |       |       | 100.0 |
+| Active                                                 |         | 54:16 |       | 100.0 |
 | Edit release notes for previous sprint                 |         |       |  2:40 |   4.9 |
 | Sprint and product backlog grooming                    |         |       |  2:26 |   4.5 |
 | Create a video demo for the previous sprint's features |         |       |  1:55 |   3.5 |
 | Read variability papers                                |         |       |  1:04 |   2.0 |
 | Emacs maintenance and exploration work                 |         |       |  0:20 |   0.6 |
-| Finish implementing the variability model              |         |       | 10:49 |  20.0 |
+| Finish implementing the variability model              |         |       | 10:49 |  19.9 |
 | Trim down stitch's use of annotations                  |         |       |  1:30 |   2.8 |
-| Read meta-data using configurations                    |         |       | 24:24 |  45.1 |
+| Read meta-data using configurations                    |         |       | 24:24 |  45.0 |
 | Remove uses of annotations                             |         |       |  7:44 |  14.3 |
 | Stitch is still using artefact writer                  |         |       |  0:04 |   0.1 |
-| Profiles as meta-model elements                        |         |       |  1:11 |   2.2 |
+| Profiles as meta-model elements                        |         |       |  1:20 |   2.5 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -434,6 +434,7 @@ Delete artefact writer.
 
 *** STARTED Profiles as meta-model elements                           :story:
     :LOGBOOK:
+    CLOCK: [2019-04-30 Tue 09:58]--[2019-04-30 Tue 10:07] =>  0:09
     CLOCK: [2019-04-29 Mon 18:10]--[2019-04-29 Mon 18:19] =>  0:09
     CLOCK: [2019-04-29 Mon 17:59]--[2019-04-29 Mon 18:09] =>  0:10
     CLOCK: [2019-04-29 Mon 17:56]--[2019-04-29 Mon 17:58] =>  0:02
